--- a/0x02-CSS_advanced/styles/31-style.css
+++ b/0x02-CSS_advanced/styles/31-style.css
@@ -718,10 +718,14 @@ ul.row {
     color: var(--color-primary);
 }
 
+.card-testimonial .card-quote {
+    position: relative;
+}
+
 .card-testimonial .card-quote::before {
     content: "\201C";
-    position: relative;
-    top:-4.5rem;
+    position: absolute;
+    top: -4.5rem;
     left: -1rem;
     color: #efeded;
     font-size: 10rem;
